32-repair layout issues

--- a/src/Component/App.scss
+++ b/src/Component/App.scss
@@ -39,6 +39,7 @@ html,body{
 	padding: 0;
 	// min-width: 100vw;
 	min-height: 100vh;
+	height:  100%;
 }
 
 .title{
@@ -72,11 +73,13 @@ html,body{
 	display: grid;
 	grid-template-areas: "header social" "content content" "footer footer";
 	grid-template-columns: auto;
-	grid-template-rows: auto auto auto;
+	grid-template-rows: min-content auto min-content;
+	min-height: 100vh;
+	height: max-content;
 	@media (max-width: 780px) {
 		grid-template-areas: "header" "content" "footer" "social";
 		grid-template-columns: 100%;
-		grid-template-rows: auto minmax(100vh,auto) auto auto;	
+		// grid-template-rows: auto minmax(100vh,auto) auto auto;	
 	}
 
 
@@ -132,8 +135,11 @@ html,body{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-content: space-around;
+	padding-top: 2em;
+	padding-bottom: 1em;
+
 	p{ margin: 0; width: max-content}
 
 }
